# tintl

./: .gitignore  Makefile  Makefile.in  README  bootstrap  configure.ac  interpolate.c  interpolate.h
doc/: doxygen-config
include/: allocation.h  fftw_cycle.h  forward.h  interpolate.f03  interpolate.h  interpolate_config.h.in  interpolate_interface.h  naive.h  naive_cuda.h  padding_aware.h  padding_aware_cuda.h  phase_shift.h  phase_shift_interface.h  timer.h
include/tintl/: allocation.h  fftw_cycle.h  forward.h  interpolate.f03  interpolate.h  naive.h  naive_cuda.h  padding_aware.h  phase_shift.h  phase_shift_spiral.h  timer.h
lib/: allocation.c  common.c  common.h  common_cuda.cu  common_cuda.h  cuda_stubs.c  fftw_utility.h  interpolate.c  naive.c  naive_cuda.cu  padding_aware.c  padding_aware_cuda.cu  phase_shift.c  phase_shift_interface.c  phase_shift_spiral.c  plan_cache.c  plan_cache.h  spiral_table.h  spiral_table_packed.h  spiral_table_split.h  timer.c
lib/spiral-generated/AVX/CPLX/: spiral_interpolate_packed_101_101_101.c  spiral_interpolate_packed_101_101_101.h  spiral_interpolate_packed_103_103_103.c  spiral_interpolate_packed_103_103_103.h  spiral_interpolate_packed_105_105_105.c  spiral_interpolate_packed_105_105_105.h  spiral_interpolate_packed_107_107_107.h  spiral_interpolate_packed_109_109_109.c  spiral_interpolate_packed_109_109_109.h  spiral_interpolate_packed_111_111_111.c  spiral_interpolate_packed_111_111_111.h  spiral_interpolate_packed_113_113_113.c  spiral_interpolate_packed_113_113_113.h  spiral_interpolate_packed_115_115_115.c  spiral_interpolate_packed_115_115_115.h  spiral_interpolate_packed_117_117_117.c  spiral_interpolate_packed_117_117_117.h  spiral_interpolate_packed_119_119_119.c  spiral_interpolate_packed_119_119_119.h  spiral_interpolate_packed_11_11_11.c  spiral_interpolate_packed_11_11_11.h  spiral_interpolate_packed_13_13_13.c  spiral_interpolate_packed_13_13_13.h  spiral_interpolate_packed_15_15_15.c  spiral_interpolate_packed_15_15_15.h  spiral_interpolate_packed_17_17_17.c  spiral_interpolate_packed_17_17_17.h  spiral_interpolate_packed_19_19_19.c  spiral_interpolate_packed_19_19_19.h  spiral_interpolate_packed_21_21_21.c  spiral_interpolate_packed_21_21_21.h  spiral_interpolate_packed_23_23_23.c  spiral_interpolate_packed_23_23_23.h  spiral_interpolate_packed_25_25_25.c  spiral_interpolate_packed_25_25_25.h  spiral_interpolate_packed_27_27_27.c  spiral_interpolate_packed_27_27_27.h  spiral_interpolate_packed_29_29_29.c  spiral_interpolate_packed_29_29_29.h  spiral_interpolate_packed_31_31_31.c  (+186 more)
lib/spiral-generated/AVX/REAL/: spiral_interpolate_split_117_117_117.c  spiral_interpolate_split_117_117_117.h  spiral_interpolate_split_117_117_125.c  spiral_interpolate_split_117_117_125.h  spiral_interpolate_split_75_75_75.c  spiral_interpolate_split_75_75_75.h  spiral_interpolate_split_91_91_91.c  spiral_interpolate_split_99_99_99.c  spiral_interpolate_split_99_99_99.h
lib/spiral-generated/SSE/CPLX/: spiral_interpolate_split_117_117_117.c  spiral_interpolate_split_117_117_125.c  spiral_interpolate_split_75_75_75.c  spiral_interpolate_split_91_91_91.c  spiral_interpolate_split_91_91_91.h  spiral_interpolate_split_99_99_99.c  spiral_interpolate_split_99_99_99.h
lib/spiral-generated/SSE/REAL/: spiral_interpolate_split_75_75_75.c  spiral_interpolate_split_91_91_91.c  spiral_interpolate_split_91_91_91.h  spiral_interpolate_split_99_99_99.c
lib/spiral-generated/common/: omega64.h
m4/: ax_with_library.m4
scripts/: generate_spiral_function_table
